add bullets for li in mobile version and strong in expanded keywords

--- a/faq.html
+++ b/faq.html
@@ -103,7 +103,7 @@
                 <div class="collapse-container container row" id="expanded-group">
                     <div class="col-lg-4 text-start">
                         <div>
-                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
+                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-definition" aria-expanded="false"
                                 aria-controls="#collapse-definition">
                                 What is hydroponics?
@@ -119,7 +119,7 @@
                         </div>
 
                         <div>
-                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
+                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-types" aria-expanded="false"
                                 aria-controls="#collapse-types">
                                 What are the different types of hydroponics system?
@@ -127,7 +127,7 @@
 
                             <div class="collapse sm-screen-collapse" id="collapse-types" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
-                                    <ul style="list-style-position: inside; list-style-type: none;">
+                                    <ul style="list-style-position: inside;">
                                         <li>Wicking</li>
                                         <li>Deep Water Culture (DWC)</li>
                                         <li> Nutrient Film Technique (NFT)</li>
@@ -139,7 +139,7 @@
                         </div>
 
                         <div>
-                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
+                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-vs" aria-expanded="false"
                                 aria-controls="#collapse-vs">
                                 Difference of hydroponics vs other farming methods
@@ -149,22 +149,22 @@
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
-                                            50% faster compared to traditional farming methods.</li>
+                                            <strong>50% faster</strong> compared to traditional farming methods.</li>
                                         <li>Because water in a hydroponic system is captured and reused, the systems use
-                                            less water — as much as 10 times less water — than traditional field crop
+                                            <strong>less water</strong> — as much as 10 times less water — than traditional field crop
                                             watering methods.</li>
-                                        <li>Hydroponics saves space. Crops can be planted very close to one another with
+                                        <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to one another with
                                             a hydroponics system since root growth is limited.</li>
                                         <li>A hydroponic system grows nutrient-dense produce in greater quantities. In
-                                            fact, we've found that our hydroponic vertical farms can grow about 240
-                                            times more than traditional farming methods.</li>
+                                            fact, we've found that our hydroponic vertical farms can grow about <strong>240
+                                            times more</strong> than traditional farming methods.</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 
                         <div>
-                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
+                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-other" aria-expanded="false"
                                 aria-controls="#collapse-other">
                                 Other non-traditional farming methods:
@@ -172,7 +172,7 @@
 
                             <div class="collapse sm-screen-collapse" id="collapse-other" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
-                                    <ul style="list-style-position: inside; list-style-type: none;">
+                                    <ul style="list-style-position: inside;">
                                         <li>Aeroponics</li>
                                         <li>Aquaponics</li>
                                         <li>Monoculture</li>
@@ -182,7 +182,7 @@
                         </div>
 
                         <div>
-                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
+                            <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-myths" aria-expanded="false"
                                 aria-controls="#collapse-myths">Common myths about
                                 hydroponics:
@@ -244,15 +244,15 @@
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
-                                        50% faster compared to traditional farming methods.</li>
+                                        <strong>50% faster</strong> compared to traditional farming methods.</li>
                                     <li>Because water in a hydroponic system is captured and reused, the systems use
-                                        less water — as much as 10 times less water — than traditional field crop
+                                        <strong>less water</strong> — as much as 10 times less water — than traditional field crop
                                         watering methods.</li>
-                                    <li>Hydroponics saves space. Crops can be planted very close to one another with
+                                    <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to one another with
                                         a hydroponics system since root growth is limited.</li>
                                     <li>A hydroponic system grows nutrient-dense produce in greater quantities. In
-                                        fact, we've found that our hydroponic vertical farms can grow about 240
-                                        times more than traditional farming methods.</li>
+                                        fact, we've found that our hydroponic vertical farms can grow about <strong>240
+                                        times more</strong> than traditional farming methods.</li>
                                 </ul>
                             </div>
                         </div>
