--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-                <div class="collapse navbar-collapse" id="navbar-content" id="top">
+                <div class="collapse navbar-collapse" id="navbar-content">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -97,7 +97,7 @@
 
                     <div class="row">
                         <div class="col-lg-12 events-group tour-container">
-                            <img class="float-end" src="images/Tour.jpg" alt="tour-image">
+                            <img class="float-end events-img" src="images/Tour.jpg" alt="tour-image">
                             <p class="text-left">
                                 We organize and accept farm tour reservations for local NGOs, office peers,
                                 family and anyone who want to visit our sites so you can see first-hand how we set up
@@ -233,7 +233,7 @@
                                 risus nec feugiat in fermentum posuere urna nec tincidunt. Aenean euismod elementum nisi
                                 quis. Donec ultrices tincidunt arcu non.
                             </p>
-                            <img class="float-start" src="images/Seminar.png" alt="seminar-image">
+                            <img class="float-start events-img" src="images/Seminar.png" alt="seminar-image">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
@@ -304,9 +304,5 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     </body>
-
-</html>
-
-</body>
 
 </html>
