--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,7 @@
                     aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbar-content" id="top">
+                <div class="collapse navbar-collapse" id="navbar-content">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -82,9 +82,7 @@
         </nav>
 
         <main>
-            <section>
 
-            </section>
             <div class="faq-section container">
                 <div class="faq-heading-container">
                     <div class="sections-heading">
@@ -105,11 +103,12 @@
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-definition" aria-expanded="false"
-                                aria-controls="#collapse-definition">
+                                aria-controls="collapse-definition">
                                 What is hydroponics?
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-definition" data-bs-parent="#expanded-group">
+                            <div class="collapse sm-screen-collapse" id="collapse-definition"
+                                data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     Hydroponics is the method of growing plants in nutrient solutions (with or
                                     without an inert medium such as soil) to provide mechanical support.
@@ -121,11 +120,12 @@
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-types" aria-expanded="false"
-                                aria-controls="#collapse-types">
+                                aria-controls="collapse-types">
                                 What are the different types of hydroponics system?
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-types" data-bs-parent="#expanded-group">
+                            <div class="collapse sm-screen-collapse" id="collapse-types"
+                                data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside;">
                                         <li>Wicking</li>
@@ -141,7 +141,7 @@
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-vs" aria-expanded="false"
-                                aria-controls="#collapse-vs">
+                                aria-controls="collapse-vs">
                                 Difference of hydroponics vs other farming methods
                             </button>
 
@@ -149,15 +149,21 @@
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
-                                            <strong>50% faster</strong> compared to traditional farming methods.</li>
+                                            <strong>50% faster</strong> compared to traditional farming methods.
+                                        </li>
                                         <li>Because water in a hydroponic system is captured and reused, the systems use
-                                            <strong>less water</strong> — as much as 10 times less water — than traditional field crop
-                                            watering methods.</li>
-                                        <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to one another with
+                                            <strong>less water</strong> — as much as 10 times less water — than
+                                            traditional field crop
+                                            watering methods.
+                                        </li>
+                                        <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to
+                                            one another with
                                             a hydroponics system since root growth is limited.</li>
                                         <li>A hydroponic system grows nutrient-dense produce in greater quantities. In
-                                            fact, we've found that our hydroponic vertical farms can grow about <strong>240
-                                            times more</strong> than traditional farming methods.</li>
+                                            fact, we've found that our hydroponic vertical farms can grow about
+                                            <strong>240
+                                                times more</strong> than traditional farming methods.
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -166,11 +172,12 @@
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-other" aria-expanded="false"
-                                aria-controls="#collapse-other">
+                                aria-controls="collapse-other">
                                 Other non-traditional farming methods:
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-other" data-bs-parent="#expanded-group">
+                            <div class="collapse sm-screen-collapse" id="collapse-other"
+                                data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside;">
                                         <li>Aeroponics</li>
@@ -184,11 +191,12 @@
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start fw-bold" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-myths" aria-expanded="false"
-                                aria-controls="#collapse-myths">Common myths about
+                                aria-controls="collapse-myths">Common myths about
                                 hydroponics:
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-myths" data-bs-parent="#expanded-group">
+                            <div class="collapse sm-screen-collapse" id="collapse-myths"
+                                data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li><b>You will need a lot of space to start:</b>
@@ -244,15 +252,19 @@
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
-                                        <strong>50% faster</strong> compared to traditional farming methods.</li>
+                                        <strong>50% faster</strong> compared to traditional farming methods.
+                                    </li>
                                     <li>Because water in a hydroponic system is captured and reused, the systems use
-                                        <strong>less water</strong> — as much as 10 times less water — than traditional field crop
-                                        watering methods.</li>
-                                    <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to one another with
+                                        <strong>less water</strong> — as much as 10 times less water — than traditional
+                                        field crop
+                                        watering methods.
+                                    </li>
+                                    <li>Hydroponics <strong>saves space.</strong> Crops can be planted very close to one
+                                        another with
                                         a hydroponics system since root growth is limited.</li>
                                     <li>A hydroponic system grows nutrient-dense produce in greater quantities. In
                                         fact, we've found that our hydroponic vertical farms can grow about <strong>240
-                                        times more</strong> than traditional farming methods.</li>
+                                            times more</strong> than traditional farming methods.</li>
                                 </ul>
                             </div>
                         </div>
@@ -297,7 +309,10 @@
                     </div>
                 </div>
 
-                <div class="push"></div>
+                <div class="push">
+
+                </div>
+            </div>
         </main>
 
         <footer>
@@ -314,6 +329,3 @@
 
 </html>
 
-</body>
-
-</html>
