--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbar-content" id="top">
+                <div class="collapse navbar-collapse" id="navbar-content">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#top">Home</a>
@@ -167,8 +167,7 @@
                                                 focused on the customer,
                                                 ultimately we'll turn out all right.”</em></p>
                                         <div class="alt-image-container">
-                                            <img class="img-fluid" src="images/Bezos-alt.png" alt="bezos-alt-img"
-                                                class="alt-image">
+                                            <img class="img-fluid alt-image" src="images/Bezos-alt.png" alt="bezos-alt-img">
                                         </div>
                                     </div>
                                 </div>
@@ -192,8 +191,7 @@
                                                 then before I die, give it
                                                 away.”</em></p>
                                         <div class="alt-image-container">
-                                            <img class="img-fluid" src="images/Beast-alt.png" alt="beast-alt-img"
-                                                class="alt-image">
+                                            <img class="img-fluid alt-image" src="images/Beast-alt.png" alt="beast-alt-img">
                                         </div>
                                     </div>
                                 </div>
@@ -211,8 +209,7 @@
                                         <p class="h6"><em>“Your most unhappy customers are your greatest source of
                                                 learning.”</em>></p>
                                         <div class="bio">
-                                            <img class="img-fluid" src="images/Gates-alt.png" alt="gates-alt-img"
-                                                class="alt-image">
+                                            <img class="img-fluid alt-image" src="images/Gates-alt.png" alt="gates-alt-img">
                                         </div>
                                     </div>
                                 </div>
@@ -232,8 +229,8 @@
                                             <!-- <span>My interest in hydroponics started in Farmville.</span> -->
                                         </p>
                                         <div class="bio">
-                                            <img class="img-fluid" src="images/Zuckerberg-alt.png"
-                                                alt="Zuckerberg-alt-img" class="alt-image">
+                                            <img class="img-fluid alt-image" src="images/Zuckerberg-alt.png"
+                                                alt="Zuckerberg-alt-img">
                                         </div>
                                     </div>
                                 </div>
